@@ -1,3 +1,7 @@
+2023. 3.30. Modified liwDLAPIListAdd to store the type-casted return value of liwDLSymbol in the api member of liwDLAPI. [liw_dl]
+2023. 3.30. Modified liwSHMModeAttach to check the return value from shmat correctly. [liw_ipc]
+2023. 3.30. Corrected type casting of the third argument of liwPActionRTCreate. [liw_paction]
+2023. 3.29. Modified config.lib and config.tools for C++ compilation. [src, tools]
 2022. 9. 4. Removed register keywords. [liw_dl, liw_coproc]
 2022. 9. 3. Reflected new specification of zeda-makefile-gen, and modified src/makefile. [src]
 2021. 6. 1. Applied new zeda-makefile-gen to compilation of shared objects. [src]
